Fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -197,24 +197,28 @@ audio::-webkit-media-controls-fullscreen-button {
 /* Media query para dispositivos con pantallas más pequeñas */
 @media (max-height: 900px) {
     body {
+        overflow-x: hidden;
         transform: scale(0.85);
     }
 }
 
 @media (max-height: 800px) {
     body {
+        overflow-x: hidden;
         transform: scale(0.8);
     }
 }
 
 @media (max-height: 700px) {
     body {
+        overflow-x: hidden;
         transform: scale(0.75);
     }
 }
 
 @media (max-height: 600px) {
     body {
+        overflow-x: hidden;
         transform: scale(0.7);
     }
 }
